--- a/frontend/static/css/home-styles.css
+++ b/frontend/static/css/home-styles.css
@@ -366,3 +366,77 @@ body {
     margin: 0;
     width: 100%;
 }
+
+@media screen and (max-width: 900px) {
+
+    body {
+        min-width: 350px;
+        max-width: 800px;
+    }
+
+    .main-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .main-left h1, h3, div {
+        margin: 0;
+        transform: translate(0, 0);
+    }
+    .main-left h3 {
+        margin: 0;
+        transform: translate(0, 0);
+    }
+    .main-left div {
+        margin: 0;
+        transform: translate(0, 0);
+    }
+    .front-page-pic {
+        margin: 0;
+        overflow: visible;
+    }
+    .middle-home {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .bottom-home {
+        display: flex;
+        flex-wrap: wrap;
+        height: auto;
+
+    }
+    .bottom-left {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+        width: auto;
+    }
+    .footer-logos {
+        display: flex;
+        flex-wrap: wrap;
+        width: auto;
+        height: auto;
+    }
+
+    .bottom-right-group {
+        margin: 0;
+
+    }
+
+    .canopies {
+        width: auto;
+    }
+
+    .add {
+        width: auto;
+    }
+
+    .contact-footer {
+        height: auto;
+    }
+
+    .contact-us {
+        width: auto;
+        margin: 0;
+    }
+}
