--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -341,6 +341,8 @@ a {
     }
 
     .dropdown-content {
+
+
         margin-left: -150px;
         min-width: 350px;
         max-width: 600px;
@@ -349,9 +351,13 @@ a {
 
 
     .close-mobile-nav-btn {
-        position: absolute;
-        top: 120px;
-        left: 38%;
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        height: 10%;
+        min-width: 100%;
+        font-size: 50pt;
+        background: green;
     }
 
     .logo {
@@ -398,15 +404,22 @@ a {
         transform: translate(110%, 50%);
           margin: 0px;
         justify-items: center;
+
     }
 
 
     .links a {
+
       padding: 8px;
       text-decoration: none;
       font-size: 12px;
       color: #818181;
       display: block; /* Display block instead of inline */
+        border: 2px solid red;
+        border-radius: 5px;
+        text-align: center;
+
+
 
     }
 
@@ -423,13 +436,5 @@ a {
       font-size: 60px;
     }
 
-    /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-    @media screen and (max-height: 450px) {
-      .nav-container a {font-size: 12px}
-      .nav-container .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-      }
-    }
+   
 }
