mobile view for frontpage

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -9,7 +9,8 @@
 
 {% block content %}
     <button class="none" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
-    <main>
+    <div id="mobile_nav"></div>
+    <main id="main_main">
     <div class="main-container">
         <div class="main-left">
             <h1>FULL FLIGHT PARACHUTE SALES, INC</h1>
