mobile view for frontpage

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -10,7 +10,9 @@
 {% block content %}
 
     <main>
-
+<div>
+    <button class="none" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
+        <div class="" id="mobile_nav"></div>
     <div class="main-container">
 
         <div class="main-left">
@@ -100,6 +102,7 @@
     </div>
     <div class="v3logo"><img class="v3logo-img" src="{% static 'images/v3logo.png' %}"></div>
     </div>
-
+</div>
     </main>
+
 {% endblock %}
