mobile view for frontpage

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -15,7 +15,7 @@
 
 <body onload="pageSizer()" onresize="pageSizer()" onscroll="{% block scroll %}{% endblock %}" >
 
-
+<div class="main-container">
   <div id="nav-home" class="nav-container"  {% block js %}{% endblock %} >
       <button class="none" id="nav-button" onclick="NavButton()"><p>NAVIGATION</p></button>
       <button class="none" id="close-mobile-nav-button" onclick="closeNavButton()">Close</button>
