mobile view for frontpage

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -12,8 +12,8 @@
     <main>
 <div>
     <button class="none" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
-
-
+<div class="" id="mobile_nav"></div>
+<div class="main-container">
         <div class="main-left">
 
             <h1>FULL FLIGHT PARACHUTE SALES, INC</h1>
