mobile view for frontpage

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -234,22 +234,35 @@
         div_id_change.className = 'none'
         change_display2.innerHTML = ''
         div_change.className = 'div-change'
-        change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
-            + '<select name="name" required id="name_change" onchange="setNewNameDescription()">'
-            + '<option  id="" selected>Choose A New Name - Current ' + document.getElementById('p-tag-name').innerHTML + ' </option>'
-            {% for x in name_options %}
-
-                + '<option value="{{ x.id }}">{{ x.name }}</option>'
-            {% endfor %}
-            + '</select>'
+        let type_display = document.getElementById('type_display').innerHTML
+        let type_array = type_display.split(' ')
+        let name_type = type_array[1]
+        let xhr = new XMLHttpRequest()
+        let method = 'GET'
+        let url = 'https://vectorrigs.herokuapp.com/api/createimageapi' + "?name_type=" + name_type
+        xhr.responseType = 'json'
+        xhr.open(method, url)
+        xhr.onload = function () {
+            const serverResponse = xhr.response
+            let names = serverResponse.response
+            let main_str = ''
+            let str_start = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
+                + '<select name="name" id="id_name" onchange="setNewNameDescription()">'
+                + '<option id="" selected>Choose A New Name - Current ' + document.getElementById('p-tag-name').innerHTML + ' </option>'
+            for (let i = 0; i < sizes.length; i++) {
+                main_str += '<option value="'+ names[i].id +'">'+ names[i].name +'</option>'
+            }
+            let final = str_start + main_str + '</select>'
             + "<button id='btn' onsubmit='closeFields()' type='submit'>Update Name</button>"
-        if (document.getElementById('e-id')) {
-            document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
+            change_display.innerHTML = final
+            if (document.getElementById('e-id')) {
+                document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
+            }
+
         }
-
-
-
-}
+        xhr.send()
+    }
+    
     </script>
     <script type="text/javascript" src="{% static 'javascript/build.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-create-new-item.js' %}"></script>
