--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -39,7 +39,7 @@
                     <button id="build-create-customer-btn" class="btnchanger" onclick="">Create a New Customer</button>
                     <button id="" class="btnchanger" onclick="openSoldCustomerSelect()">Customer select</button>
                     <button id="" class="btnchanger" onclick="">Date sold select</button>
-                    <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
+                    <button id="" class="btnchanger" onclick="createSoldInfoChange()">Update Info</button>
                     <button id="" class="btnchanger" onclick="">Sold info 2 select</button>
                 </div>
                 <div id="shipping-update-btn-group" class="none">
