--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -2,5 +2,6 @@
     {% csrf_token %}
     <input type="number" name="id">
     <textarea name="info" cols="40" rows="10" id="id_info"></textarea>
+    <textarea name="other" cols="40" rows="10" id="id_other"></textarea>
     <button class="" type="submit">Submit</button>
 </form>
