mobile view for frontpage

--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -2,7 +2,9 @@
     {% csrf_token %}
     <input type="number" name="id">
 
-    <textarea></textarea>
+    <textarea name="info"></textarea>
+
+    <textarea name="other"></textarea>
 
     <button class="" type="submit">Submit</button>
 </form>
