mobile view for frontpage

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -38,7 +38,7 @@
                     <button id="" class="btnchanger" onclick="">Item select</button>
                     <button id="build-create-customer-btn" class="btnchanger" onclick="openNewSoldCustomerDisplay(); closeSoldChangeDiv(); closeSoldChangeDisplay()">Create a New Customer</button>
                     <button id="" class="btnchanger" onclick="openSoldCustomerSelect(); closeSoldNewCustomerDiv()">Change to Sold</button>
-                    <button id="" class="btnchanger" onclick="closeSoldNewCustomerDiv()">Update Date Sold</button>
+                    <button id="" class="btnchanger" onclick="closeSoldNewCustomerDiv(); createSoldDateChange()">Update Date Sold</button>
                     <button id="" class="btnchanger" onclick="createSoldInfoChange(); closeSoldNewCustomerDiv()">Update Info</button>
                     <button id="" class="btnchanger" onclick="createSoldOtherChange(); closeSoldNewCustomerDiv()">Update Other</button>
                 </div>
