--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -79,6 +79,7 @@
 
 {% block content %}
 {% endblock %}
+  {% block container %}
   {% for x in containers %}
                 <div class="container">
                     <div class="inner-container">
@@ -113,6 +114,7 @@
                     </div>
                 </div>
         {% endfor %}
+  {% endblock %}
 <script type="text/javascript" src="{% static 'javascript/index.js' %}"></script>
 </body>
 </html>
